# open-spyro

./: .clang-format  .gitignore  Makefile  PROGRESS.md  README.md
.github/workflows/: ci.yml
asm/: header.s
asm/data/: data.data.s  rodata_pre.rodata.s
config/: compile.sh  disc.xml  overlays.json  sha1sums.txt  spyro.main.ld  spyro.main.yaml  symbol_addrs.txt  text_layout.json  undefined_funcs_auto.txt  undefined_syms_auto.txt  wad.json
config/overlays/: credits.ld  credits.undefined_funcs.auto.txt  credits.undefined_syms.auto.txt  level_0_artisans_home.ld  level_0_artisans_home.undefined_funcs.auto.txt  level_0_artisans_home.undefined_syms.auto.txt  level_10_peace_keepers_doctor_shemp.ld  level_10_peace_keepers_doctor_shemp.undefined_funcs.auto.txt  level_10_peace_keepers_doctor_shemp.undefined_syms.auto.txt  level_11_peace_keepers_night_flight.ld  level_11_peace_keepers_night_flight.undefined_funcs.auto.txt  level_11_peace_keepers_night_flight.undefined_syms.auto.txt  level_12_magic_crafters_home.ld  level_12_magic_crafters_home.undefined_funcs.auto.txt  level_12_magic_crafters_home.undefined_syms.auto.txt  level_13_magic_crafters_alpine_ridge.ld  level_13_magic_crafters_alpine_ridge.undefined_funcs.auto.txt  level_13_magic_crafters_alpine_ridge.undefined_syms.auto.txt  level_14_magic_crafters_high_caves.ld  level_14_magic_crafters_high_caves.undefined_funcs.auto.txt  level_14_magic_crafters_high_caves.undefined_syms.auto.txt  level_15_magic_crafters_wizard_peak.ld  level_15_magic_crafters_wizard_peak.undefined_funcs.auto.txt  level_15_magic_crafters_wizard_peak.undefined_syms.auto.txt  level_16_magic_crafters_blowhard.ld  level_18_beast_makers_home.ld  (+84 more)
include/: funcs.h  globals.h  types.h
tools/: .dockerignore  Dockerfile  build_main.sh  build_overlays.sh  ci.sh  docker_env.sh  extract.sh  make_iso.sh  play.sh  setup.sh  verify_main.sh  wad.sh
tools/open-spyro/: README.md  pyproject.toml
tools/open-spyro/src/open_spyro/: __init__.py  __main__.py  cli.py  fixup_hasm.py  gen_overlay_yaml.py  gen_slots_ld.py  gen_syms_ld.py  normalize_binary.py  overlays.py  paths.py  progress.py  progress_delta.py  sectionize.py  wad.py
(+320 files in other folders)
